--- a/packages/toolpad-app/src/toolpad/index.html
+++ b/packages/toolpad-app/src/toolpad/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link rel="manifest" href="/static/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      window['__TOOLPAD_RUNTIME_CONFIG__'] = {};
-    </script>
+    <!-- __TOOLPAD_SCRIPTS__ -->
     <script type="module" src="/main.tsx"></script>
   </body>
 </html>
