<body className="notranslate">

--- a/packages/toolpad-app/src/toolpad/index.html
+++ b/packages/toolpad-app/src/toolpad/index.html
@@ -9,7 +9,7 @@
     <link rel="manifest" href="/static/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body className="notranslate">
     <div id="root"></div>
     <!-- __TOOLPAD_SCRIPTS__ -->
     <script type="module" src="/main.tsx"></script>
